<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the setting activity -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
  <TextView
  	android:text="@string/user_agreement1"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_margin="5dp" />
  <TextView
  	android:text="@string/user_agreement2"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_margin="5dp" />
  <TextView
  	android:text="@string/user_agreement3"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_margin="5dp" />
  		
  <LinearLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="5dp">
  	<CheckBox
  		android:id="@+id/btn_logging"
  		android:text="@string/disable_logging"
  		android:textAppearance="?android:attr/textAppearanceLarge"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content" />	
  </LinearLayout>
</LinearLayout>
