<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
  <include layout="@layout/top_bar" />
  
  <EditText
  	android:id="@+id/txt_job_company"
  	android:hint="@string/hint_company"
  	android:layout_width="250dp"
  	android:layout_height="wrap_content"
  	android:layout_marginTop="25dp"
  	android:layout_marginLeft="5dp"
  	android:inputType="textCapWords"
	 	android:singleLine="true"  	
  />

  <EditText
  	android:id="@+id/txt_job_title"
  	android:hint="@string/hint_title"
  	android:layout_width="250dp"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="5dp"
  	android:layout_marginTop="5dp"  	
  	android:inputType="textCapWords"
	 	android:singleLine="true"  	
  />

  <EditText
  	android:id="@+id/txt_job_department"
  	android:hint="@string/hint_department"
  	android:layout_width="250dp"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="5dp"
  	android:layout_marginTop="5dp"
  	android:inputType="textCapWords"
	 	android:singleLine="true"  	
  />
  
</LinearLayout>
